Move toggle elo button down to avoid overlapping with title

--- a/src/pages/home/HomePage.module.css
+++ b/src/pages/home/HomePage.module.css
@@ -26,7 +26,7 @@
   position: absolute;
   padding: 8px 14px;
   right: 14px;
-  top: 48px;
+  top: 84px;
 }
 
 .EloToggleOff {
